--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="corpoDeMensagens">
         </div>
         <div class="bottom">
-            <input type="Escreva aqui...">
+            <input type="text" placeholder="Escreva aqui ...">
             <div class="enviarmsg" onclick="enviarMsg()"><ion-icon name="paper-plane-outline"></ion-icon></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
