--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+     <link rel="shortcut icon" href="img/icon-page.png" />
+    <title>Bate Papo UOL</title>
 </head>
 <body>
     <div class="container">
